Address compilation errors with Java 9 (alpha)
Address compilation errors related to change in return type of method
TreeNode.children​() and depthFirstEnumeration​(), with Java 9 it returns
Enumeration<TreeNode>.
Remove/replace usage of Integer and Long constructors.
Update changes and bump version in ZapAddOn.xml files (where required).

Part of zaproxy/zaproxy#2602 - Java 9